[package]
name = "rwcs"
version = "0.1.0"
authors = ["jvo203 <chris.zapart@nao.ac.jp>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

# "wee_alloc" feature enables use of the `wee_alloc` crate, which is a tiny
# allocator for wasm that is only ~1K in code size. This is great for code size!

[dependencies]
wasm-bindgen = "0.2.92"
cfg-if = "1.0.0"
wee_alloc = { version = "0.4.5", optional = true }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
# wcs = "0.2.8"
# fitsrs = "0.2.9"
fitsrs = { git = "https://github.com/jvo203/fitsrs.git" }
wcs = { git = "https://github.com/jvo203/wcs-rs.git" }

[dependencies.web-sys]
version = "0.3.69"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
# Tell `rustc` to aggresively optimize for small code size.
opt-level = "z"
